// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Menu - snapshots Menu advanced mode, online 1`] = `
<View
  style={
    {
      "alignItems": "stretch",
      "backgroundColor": "#040C17",
      "flex": 1,
    }
  }
>
  <Text
    style={
      {
        "color": "#ffffff",
        "fontSize": 15,
        "fontWeight": "400",
        "marginLeft": 30,
        "marginVertical": 10,
        "opacity": 1,
      }
    }
  >
    text translated
  </Text>
  <View
    style={
      {
        "backgroundColor": "#18bd18",
        "height": 1,
      }
    }
  />
  <View
    style={
      {
        "display": "flex",
        "marginLeft": 20,
      }
    }
  >
    <Text
      onPress={[Function]}
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 14,
          "fontWeight": "400",
          "opacity": 1,
          "paddingTop": 25,
        }
      }
      testID="menu.about"
    >
      text translated
    </Text>
    <Text
      onPress={[Function]}
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 14,
          "fontWeight": "400",
          "opacity": 1,
          "paddingTop": 25,
        }
      }
      testID="menu.info"
    >
      text translated
    </Text>
    <Text
      onPress={[Function]}
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 14,
          "fontWeight": "400",
          "opacity": 1,
          "paddingTop": 25,
        }
      }
      testID="menu.addressbook"
    >
      text translated
    </Text>
    <Text
      onPress={[Function]}
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 14,
          "fontWeight": "400",
          "opacity": 1,
          "paddingTop": 25,
        }
      }
      testID="menu.walletseedufvk"
    >
      text translated
    </Text>
    <Text
      onPress={[Function]}
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 14,
          "fontWeight": "400",
          "opacity": 1,
          "paddingTop": 25,
        }
      }
      testID="menu.rescan"
    >
      text translated
    </Text>
    <Text
      onPress={[Function]}
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 14,
          "fontWeight": "400",
          "opacity": 1,
          "paddingTop": 25,
        }
      }
      testID="menu.syncreport"
    >
      text translated
    </Text>
    <Text
      onPress={[Function]}
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 14,
          "fontWeight": "400",
          "opacity": 1,
          "paddingTop": 25,
        }
      }
      testID="menu.fundpools"
    >
      text translated
    </Text>
    <Text
      onPress={[Function]}
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 14,
          "fontWeight": "400",
          "opacity": 1,
          "paddingTop": 25,
        }
      }
      testID="menu.insight"
    >
      text translated
    </Text>
    <Text
      onPress={[Function]}
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 14,
          "fontWeight": "400",
          "opacity": 1,
          "paddingTop": 25,
        }
      }
      testID="menu.changewallet"
    >
      text translated
    </Text>
    <Text
      onPress={[Function]}
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 14,
          "fontWeight": "400",
          "opacity": 1,
          "paddingTop": 25,
        }
      }
    >
      text translated
    </Text>
  </View>
  <View
    style={
      {
        "backgroundColor": "#040C17",
        "paddingBottom": 0,
        "paddingHorizontal": 15,
        "paddingTop": 10,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "borderColor": "#888888",
          "borderRadius": 10,
          "borderWidth": 1,
          "flexDirection": "row",
          "opacity": 1,
          "padding": 10,
        }
      }
    >
      <Image
        source={
          {
            "testUri": "../../../assets/img/logobig-zingo.png",
          }
        }
        style={
          {
            "borderRadius": 8,
            "height": 32,
            "resizeMode": "contain",
            "width": 32,
          }
        }
      />
      <Text
        style={
          {
            "color": "#c3c3c3",
            "flex": 1,
            "fontSize": 18,
            "fontWeight": "bold",
            "marginLeft": 10,
          }
        }
      >
        Zingo 
        <Text
          style={
            {
              "color": "#60849c",
              "fontSize": 14,
              "fontWeight": "bold",
            }
          }
        >
          text translated
        </Text>
      </Text>
      <
        color="#888888"
        icon={
          {
            "icon": [
              512,
              512,
              [
                128472,
                "refresh",
                "sync",
              ],
              "f021",
              "M65.9 228.5c13.3-93 93.4-164.5 190.1-164.5 53 0 101 21.5 135.8 56.2 .2 .2 .4 .4 .6 .6l7.6 7.2-47.9 0c-17.7 0-32 14.3-32 32s14.3 32 32 32l128 0c17.7 0 32-14.3 32-32l0-128c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 53.4-11.3-10.7C390.5 28.6 326.5 0 256 0 127 0 20.3 95.4 2.6 219.5 .1 237 12.2 253.2 29.7 255.7s33.7-9.7 36.2-27.1zm443.5 64c2.5-17.5-9.7-33.7-27.1-36.2s-33.7 9.7-36.2 27.1c-13.3 93-93.4 164.5-190.1 164.5-53 0-101-21.5-135.8-56.2-.2-.2-.4-.4-.6-.6l-7.6-7.2 47.9 0c17.7 0 32-14.3 32-32s-14.3-32-32-32L32 320c-8.5 0-16.7 3.4-22.7 9.5S-.1 343.7 0 352.3l1 127c.1 17.7 14.6 31.9 32.3 31.7S65.2 496.4 65 478.7l-.4-51.5 10.7 10.1c46.3 46.1 110.2 74.7 180.7 74.7 129 0 235.7-95.4 253.4-219.5z",
            ],
            "iconName": "arrows-rotate",
            "prefix": "fas",
          }
        }
        size={18}
      />
    </View>
    <Text
      style={
        {
          "color": "#ffffff",
          "fontSize": 8,
          "marginBottom": 12,
          "marginTop": 12,
        }
      }
    >
      Version: 
      <Text
        style={
          {
            "color": "#5a8c5a",
          }
        }
      >
        2.0.19 (307)
      </Text>
         
      text translated
      <Text
        style={
          {
            "color": "#5a8c5a",
          }
        }
      >
        text translated
      </Text>
    </Text>
  </View>
</View>
`;

exports[`Menu - snapshots Menu basic mode, no value transfers 1`] = `
<View
  style={
    {
      "alignItems": "stretch",
      "backgroundColor": "#040C17",
      "flex": 1,
    }
  }
>
  <Text
    style={
      {
        "color": "#ffffff",
        "fontSize": 15,
        "fontWeight": "400",
        "marginLeft": 30,
        "marginVertical": 10,
        "opacity": 1,
      }
    }
  >
    text translated
  </Text>
  <View
    style={
      {
        "backgroundColor": "#18bd18",
        "height": 1,
      }
    }
  />
  <View
    style={
      {
        "display": "flex",
        "marginLeft": 20,
      }
    }
  >
    <Text
      onPress={[Function]}
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 14,
          "fontWeight": "400",
          "opacity": 1,
          "paddingTop": 25,
        }
      }
      testID="menu.about"
    >
      text translated
    </Text>
    <Text
      onPress={[Function]}
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 14,
          "fontWeight": "400",
          "opacity": 1,
          "paddingTop": 25,
        }
      }
      testID="menu.addressbook"
    >
      text translated
    </Text>
    <Text
      onPress={[Function]}
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 14,
          "fontWeight": "400",
          "opacity": 1,
          "paddingTop": 25,
        }
      }
      testID="menu.loadwalletfromseed"
    >
      text translated
    </Text>
    <Text
      onPress={[Function]}
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 14,
          "fontWeight": "400",
          "opacity": 1,
          "paddingTop": 25,
        }
      }
      testID="menu.tipzingolabs"
    >
      text translated
    </Text>
    <Text
      onPress={[Function]}
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 14,
          "fontWeight": "400",
          "opacity": 1,
          "paddingTop": 25,
        }
      }
    >
      text translated
    </Text>
  </View>
  <View
    style={
      {
        "backgroundColor": "#040C17",
        "paddingBottom": 0,
        "paddingHorizontal": 15,
        "paddingTop": 10,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "borderColor": "#888888",
          "borderRadius": 10,
          "borderWidth": 1,
          "flexDirection": "row",
          "opacity": 1,
          "padding": 10,
        }
      }
    >
      <Image
        source={
          {
            "testUri": "../../../assets/img/logobig-zingo.png",
          }
        }
        style={
          {
            "borderRadius": 8,
            "height": 32,
            "resizeMode": "contain",
            "width": 32,
          }
        }
      />
      <Text
        style={
          {
            "color": "#c3c3c3",
            "flex": 1,
            "fontSize": 18,
            "fontWeight": "bold",
            "marginLeft": 10,
          }
        }
      >
        Zingo 
        <Text
          style={
            {
              "color": "#43a637",
              "fontSize": 14,
              "fontWeight": "bold",
            }
          }
        >
          text translated
        </Text>
      </Text>
      <
        color="#888888"
        icon={
          {
            "icon": [
              512,
              512,
              [
                128472,
                "refresh",
                "sync",
              ],
              "f021",
              "M65.9 228.5c13.3-93 93.4-164.5 190.1-164.5 53 0 101 21.5 135.8 56.2 .2 .2 .4 .4 .6 .6l7.6 7.2-47.9 0c-17.7 0-32 14.3-32 32s14.3 32 32 32l128 0c17.7 0 32-14.3 32-32l0-128c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 53.4-11.3-10.7C390.5 28.6 326.5 0 256 0 127 0 20.3 95.4 2.6 219.5 .1 237 12.2 253.2 29.7 255.7s33.7-9.7 36.2-27.1zm443.5 64c2.5-17.5-9.7-33.7-27.1-36.2s-33.7 9.7-36.2 27.1c-13.3 93-93.4 164.5-190.1 164.5-53 0-101-21.5-135.8-56.2-.2-.2-.4-.4-.6-.6l-7.6-7.2 47.9 0c17.7 0 32-14.3 32-32s-14.3-32-32-32L32 320c-8.5 0-16.7 3.4-22.7 9.5S-.1 343.7 0 352.3l1 127c.1 17.7 14.6 31.9 32.3 31.7S65.2 496.4 65 478.7l-.4-51.5 10.7 10.1c46.3 46.1 110.2 74.7 180.7 74.7 129 0 235.7-95.4 253.4-219.5z",
            ],
            "iconName": "arrows-rotate",
            "prefix": "fas",
          }
        }
        size={18}
      />
    </View>
    <Text
      style={
        {
          "color": "#ffffff",
          "fontSize": 8,
          "marginBottom": 12,
          "marginTop": 12,
        }
      }
    >
      Version: 
      <Text
        style={
          {
            "color": "#5a8c5a",
          }
        }
      >
        2.0.19 (307)
      </Text>
         
      text translated
      <Text
        style={
          {
            "color": "#5a8c5a",
          }
        }
      >
        text translated
      </Text>
    </Text>
  </View>
</View>
`;
